--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ a:hover{
   opacity:.5;
 }
 
-/*-------------------------------------about----------------------------------------*/
+/*-------------------------------------about/CV----------------------------------------*/
 #aboutContainer{
   height:auto;
   max-width:100%;
@@ -75,7 +75,7 @@ a:hover{
 #about{
  max-width: 100%;
  display: grid;
- grid-template-columns: 25% 37.5% 37.5%;
+ grid-template-columns: 25% 18.75% 18.75% 18.75% 18.75%;
  border-bottom:.6px solid rgba(0,0,0,.5);
  padding-bottom:10px;
 }
@@ -87,48 +87,84 @@ a:hover{
 
 #about .p{
   grid-row:1;
-  grid-column-start: 2;
-  grid-column-end: 4;
-  padding-bottom:14px;
-  padding-right: 14px;
-  max-width: 900px;
+  grid-column: 2/span 3;
+  padding-right: 36px; /*was 14px*/
+     /*padding-bottom:14px;*/
+     /* max-width: 900px;*/
 }
 #about .contact{
-  display:inline-block;
-  justify-content:flex-start;
+  /*display:inline-block;*/
   text-align:left;
-  padding-right:24px;
-  grid-column-start:2;
-  grid-row:2;
+  /*padding-right:24px;*/
+  grid-column-start:5;
+  grid-row:1;
+  place-self:stretch;
+  justify-content:space-between;
+  display:flex;
+  flex-direction:column;
+  columns:1;
+}
+#about .contact .links{
+  columns:2;
+}
+#about .contact #opencv{
+  align-self:start;
+  vertical-align:bottom;
+  cursor: pointer;
 }
 
-a, .flip, .name, .info{
+a, .flip, .name, .info, #opencv{
   transition: opacity .2s linear;
 }
-a:hover{
+a:hover, #opencv:hover{
   opacity:.5;
 }
-.twocols, .clients{
+.cv{
+  max-width:100%;
+  grid-column-start:1;
+  grid-column-end:6;
+  padding-top:20px;
+  padding-bottom:20px;
+  display: flex;
+  flex-direction:row;
+  grid-column: 2/span 4;
+  grid-template-columns: 50% 50%;
+}
+/*.press, .clients{
   columns:2;
-  /*----display flex so the cols don't stretch across the whole grid box-----*/
+  ----display flex so the cols don't stretch across the whole grid box-----
   display:flex;
   flex-direction:row;
   align-items:flex-start;
+}*/
+.cv-item{
+  padding-right: 36px;
 }
-.twocols{
-  grid-row:2;
-  grid-column-start:2;
-  padding-right:24px;
+.clients{
+  grid-column: 1;
+ /* columns:2;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;*/
+}
+.clients .column:nth-of-type(2){
+  padding-top:20px;
+}
+.awards{
+  grid-column:1;
+}
+.features{
+  padding-top:20px;
+  grid-column:1;
+}
+.writing{
+  grid-column:2;
+  width: 50%;
 }
 
-.clients{
-  grid-row:2;
-  grid-column-start:3;
-  padding-left:5px;
-}
-.clients div:nth-of-type(1){
+/*.clients div:nth-of-type(1){
   padding-right:24px;
-}
+}*/
 
 
 /*---------------------------------------------index-------------------------------*/
