--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,8 @@
 }
 body {
 	font-family: 'Suisse Intl';
-	font-size: 12px;
-	line-height: 1.35;
+	font-size: 13px;
+	line-height: 1.4;
 	color: #0a0a0a;
   overflow-x: hidden;
   margin:0;
@@ -46,6 +46,7 @@ transition: background-color 0.5s;
 
 h3{
   font-size:1.1rem;
+  line-height:1.25;
   padding:0px;
   margin:0px;
   font-weight:400;
@@ -87,25 +88,18 @@ a:hover{
 
 #about .p{
   grid-row:1;
-  grid-column: 2/span 3;
+  grid-column: 2/span 4;
   padding-right: 36px; /*was 14px*/
      /*padding-bottom:14px;*/
-     /* max-width: 900px;*/
+  max-width: 950px;
 }
-#about .contact{
-  /*display:inline-block;*/
-  text-align:left;
-  /*padding-right:24px;*/
-  grid-column-start:5;
-  grid-row:1;
-  place-self:stretch;
-  justify-content:space-between;
+.links{
   display:flex;
-  flex-direction:column;
-  columns:1;
+  flex-direction:row;
 }
-#about .contact .links{
-  columns:2;
+
+.links a{
+  padding-right:24px;
 }
 #about .contact #opencv{
   align-self:start;
@@ -123,11 +117,11 @@ a:hover, #opencv:hover{
   max-width:100%;
   grid-column-start:1;
   grid-column-end:6;
-  padding-top:20px;
-  padding-bottom:20px;
+  padding-top:10px;
+  padding-bottom:0px;
   display: flex;
   flex-direction:row;
-  grid-column: 2/span 4;
+  grid-column: 2/span 5;
   grid-template-columns: 50% 50%;
 }
 /*.press, .clients{
@@ -137,35 +131,9 @@ a:hover, #opencv:hover{
   flex-direction:row;
   align-items:flex-start;
 }*/
-.cv-item{
-  padding-right: 36px;
-}
-.clients{
-  grid-column: 1;
- /* columns:2;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;*/
-}
-.clients .column:nth-of-type(2){
-  padding-top:20px;
-}
-.awards{
-  grid-column:1;
-}
-.features{
-  padding-top:20px;
-  grid-column:1;
-}
-.writing{
-  grid-column:2;
-  width: 50%;
-}
-
-/*.clients div:nth-of-type(1){
-  padding-right:24px;
+/*.cv-item{
+  padding-right: 42px;
 }*/
-
 
 /*---------------------------------------------index-------------------------------*/
 #fullindex{
