--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,7 @@ h2:has(.col3){
 }
 .description{
   grid-column:1;
+  grid-row:1/span 3;
 }
 /*---------------hero sections-------------------*/
 /*-----------------------various polyptych setups for multiple images in one row----------------*/
@@ -149,6 +150,14 @@ h2:has(.col3){
 }
 .polyptych{
   grid-template-columns: auto auto auto auto;
+}
+/*------------------------video--------------------*/
+
+video{
+  position:relative;
+  width: 100%;
+  height:auto;
+  padding-bottom:7px;
 }
 /*-----------------------zoom-in overlay on photos----------------*/
 .modal-overlay{
@@ -218,11 +227,11 @@ h2:has(.col3){
     grid-template-columns: 1fr 350px;
     padding: 0px 18px 0px 18px;
   }
-
   .nav-1, .nav-2{
     grid-column:2;
     display:flex;
     flex-direction:row;
+    transform:translateX(-9px);
   }
   .nav-1 h2, .nav-2 h2{
     grid-column: 2;
@@ -279,6 +288,9 @@ h2:has(.col3){
   }
   .nav-1, .nav-2, #projfooter h2:first-of-type{
     grid-column:1;
+  }
+  .nav-1, .nav-2{
+    transform:translateX(0px);
   }
   .name{
     padding-bottom:9px;
