--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,10 @@ h2:has(.col3){
   grid-template-columns: auto auto auto auto;
 }
 /*------------------------video--------------------*/
-
+.video-wrapper{
+  display:inline;
+  overflow:hidden;
+}
 video{
   position:relative;
   width: 100%;
