--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
 /*------universal grid--------*/
 body{
   max-width: 100vw;
-  margin: 26px 0px 26px 0px;
+  margin: 12px 0px 12px 0px;
   overflow-x: hidden;
   font-family: 'Suisse Intl';
 	font-size: 12px;
@@ -30,7 +30,7 @@ body{
 #navcontainer, .listing, #gallery, #projfooter, #about, #downloadcv{
   max-width: 100%;
   display: grid;
-  padding: 0px 26px 0px 26px;
+  padding: 0px 12px 0px 12px;
   grid-template-columns: 370px 1fr 1fr;
   grid-column-gap: 9px;
 }
@@ -101,7 +101,7 @@ img{
   grid-column:3;
 }
 .nav-1 a, .nav-2 a:first-of-type{
-  margin-right:26px;
+  margin-right:12px;
 }
 /*----------homepage listings----------*/
 .listing{
@@ -188,15 +188,15 @@ video{
 /*------------------captions and subheads----------*/
 .caption{
   width: 324px;
-  padding:0px 0px 18px 0px;
+  padding:0px 0px 12px 0px;
 }
 .citation{
   padding-left:4.5px;
   opacity:.5;
 }
 .subhead{
-  padding-top:26px;
-  padding-bottom:18px;
+  padding-top:24px;
+  padding-bottom:12px;
 }
 /*------------------about page------------------*/
 #about{
@@ -223,12 +223,11 @@ video{
 /*-----------------------medddddddia queriesssssss------------------------------------*/
 
 @media (max-width: 850px) {
-  body{
+  /*body{
     margin: 18px 0px 18px 0px;
-  }
+  }*/
   #navcontainer, .listing, #gallery, #projfooter, #about, #downloadcv{
     grid-template-columns: 1fr 350px;
-    padding: 0px 18px 0px 18px;
   }
   .nav-1, .nav-2{
     grid-column:2;
@@ -271,7 +270,7 @@ video{
   }
   h2, .subhead, #about h2{
     font-size: 16.5px;
-    line-height:19px;
+    line-height:18px;
   }
   /*------image arrangements------*/
   .polyptych{
@@ -358,14 +357,14 @@ img {
   position:relative;
   display:inline-flex;
   flex-direction:column;
-  margin-bottom:20px;
+  margin-bottom:18px;
 }
 textarea {
   overflow-y:scroll;
   font-family: "Reconna";
   font-size: 30px;
   height:300px;
-  padding: 10px 15px 10px 15px;
+  padding: 9px 12px 9px 12px;
   border-radius:8px;
   border: .6px solid rgba(0,0,0,.5);
   resize: none;
