--- a/css/style.css
+++ b/css/style.css
@@ -220,12 +220,29 @@ video{
   padding-top: 42px;
 
 }
+/*------------------------lightbox-------------------*/
+#lightbox {
+  display: none;
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.lightbox-content {
+  margin-top: 50vh;
+  margin-left:50vw;
+  transform:translate(-50%, -50%);
+  display: block;
+  width: 85%;
+}
 /*-----------------------medddddddia queriesssssss------------------------------------*/
 
 @media (max-width: 850px) {
-  /*body{
-    margin: 18px 0px 18px 0px;
-  }*/
   #navcontainer, .listing, #gallery, #projfooter, #about, #downloadcv{
     grid-template-columns: 1fr 350px;
   }
@@ -250,6 +267,7 @@ video{
   .listing img:nth-of-type(2){
     display:none;
   }
+
   .listing h2{
     grid-column: 1/end;
     grid-row:1;
