--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ video{
   background-color: rgba(0, 0, 0, 0.9);
 }
 
-.lightbox-content {
+#lightbox-img, #lightbox-video {
   margin-top: 50vh;
   margin-left:50vw;
   transform:translate(-50%, -50%);
