--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body{
 #wrapper{
   width:auto;
   display:grid;
-  grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
+  grid-template-columns: repeat(3, minmax(0, 1fr));
   grid-column-gap:4px;
   grid-row-gap:4px;
   overflow:hidden;
@@ -172,7 +172,7 @@ img:not(.new-listing *), video:not(.new-listing *) {
 }
 video{
   width: 100%;
-  height:auto;
+  height:100%;
   margin:0px;
   padding:0px;
 }
