--- a/css/style.css
+++ b/css/style.css
@@ -250,7 +250,7 @@ video{
 
 @media (max-width: 850px) {
   #wrapper{
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .nav-2, #projfooter h2:nth-of-type(2){
@@ -267,25 +267,25 @@ video{
     display:flex;
     flex-direction:column;
   }
-  .listing{
+  .new-listing{
     padding-bottom:18px;
   }
-  .listing img:first-of-type{
+  .new-listing img:first-of-type{
     grid-column: 1/end;
     grid-row:2;
   }
-  .listing img:nth-of-type(2), .not-mobile{
+  .new-listing img:nth-of-type(2), .not-mobile{
     display:none;
   }
 
-  .listing h2{
+  .new-listing h2{
     grid-column: 1/end;
     grid-row:1;
   }
   .col1, .col2, .col3, .col12, .col23{
-    grid-column: 1/end;
+    grid-column: 1/span 2;
   }
-  .listing h2{
+  .new-listing h2{
     padding-bottom:9px;
   }
 
@@ -304,9 +304,6 @@ video{
   .triptych{
     grid-template-columns: auto;
   }
-  .modal-overlay img{
-    max-width:96%;
- }
 }
 
 @media (max-width: 566px) {
@@ -322,7 +319,7 @@ video{
   }
 }
 @media(max-width: 400px) {
-  #navcontainer, .listing, #gallery, #projfooter, #about, #downloadcv{
+  #navcontainer, .new-listing, #projfooter, #about, #downloadcv{
   grid-template-columns: 1fr;
   }
 }
