--- a/css/style.css
+++ b/css/style.css
@@ -270,11 +270,10 @@ video{
   .new-listing{
     padding-bottom:18px;
   }
-  .new-listing img:first-of-type{
+  .new-listing img, .new-listing .video-wrapper {
     grid-column: 1/end;
-    grid-row:2;
   }
-  .new-listing img:nth-of-type(2), .not-mobile{
+  .not-mobile{
     display:none;
   }
 
@@ -283,7 +282,7 @@ video{
     grid-row:1;
   }
   .col1, .col2, .col3, .col12, .col23{
-    grid-column: 1/span 2;
+    grid-column: 1/end;
   }
   .new-listing h2{
     padding-bottom:9px;
@@ -357,11 +356,6 @@ img {
   }
 }
 /*----- CSS for the blur-in lazy load effect */
-.image-container {
-  position: relative;
-  display: inline-block; /* Allow containers to size based on their content */
-  overflow: hidden; /* Hide any part of the image that goes beyond the container */
-}
 
 .lozad {
   opacity:0; 
