--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ i{
 /*-----type styles-----*/
 h3, h2, .subhead{
   font-size: 18px;
-  line-height:22px;
+  line-height:22.5px;
   font-weight:400;
   margin-top:9px;
   margin-bottom:12px;
@@ -222,7 +222,6 @@ video{
 /*------------------about page------------------*/
 
 #about h2{
-  line-height: 22px;
   padding-right:42px;
   max-width:850px;
 }
@@ -240,10 +239,10 @@ video{
 
 }
 /*------------------------lightbox-------------------*/
-#lightbox {
+/*#lightbox {
   display: none;
   position: fixed;
-  z-index: 10;
+  z-index: 1000;
   left: 0;
   top: 0;
   width: 100%;
@@ -255,10 +254,55 @@ video{
 #lightbox-img, #lightbox-video {
   margin-top: 50vh;
   margin-left:50vw;
-  transform:translate(-50%, -50%);
+ transform:translate(-50%, -50%);
   display: block;
   width: 85%;
+}*/
+/*lightbox neue*/
+#lightbox {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.85);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
 }
+
+.lightbox-overlay {
+  position: absolute;
+  inset: 0;
+  cursor: pointer;
+}
+
+.lightbox-content {
+  position: relative;
+  z-index: 10;
+  max-width: 90vw;
+  max-height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#lightbox img,
+#lightbox video,
+#lightbox iframe {
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+}
+
+#lightbox .close {
+  position: absolute;
+  top: 16px;
+  right: 20px;
+  color: white;
+  font-size: 32px;
+  cursor: pointer;
+  z-index: 11;
+}
+
 /*-----------------------medddddddia queriesssssss------------------------------------*/
 
 @media (max-width: 850px) {
@@ -307,7 +351,7 @@ video{
   }
   h2, .subhead, #about h2{
     font-size: 16.5px;
-    line-height:18px;
+    line-height:20px;
   }
   /*------image arrangements------*/
   .polyptych{
