--- a/css/style.css
+++ b/css/style.css
@@ -241,26 +241,6 @@ video{
 
 }
 /*------------------------lightbox-------------------*/
-/*#lightbox {
-  display: none;
-  position: fixed;
-  z-index: 1000;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-  background-color: rgba(0, 0, 0, 0.9);
-}
-
-#lightbox-img, #lightbox-video {
-  margin-top: 50vh;
-  margin-left:50vw;
- transform:translate(-50%, -50%);
-  display: block;
-  width: 85%;
-}*/
-/*lightbox neue*/
 #lightbox {
   position: fixed;
   inset: 0;
@@ -311,16 +291,18 @@ video{
   #wrapper{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
-
+  .nav-2{
+    display:none;
+  }
   .nav-2, #projfooter h2:nth-of-type(2){
     text-align:left;
   }
-
   .nav-1, .nav-2{
     grid-column:2;
     display:flex;
     flex-direction:row;
   }
+
   .nav-1 h2, .nav-2 h2{
     grid-column: 2;
     display:flex;
